# BondsAI

./: .gitignore  README.md  api_server.py  env.example  main.py  pyproject.toml  quant_trading.txt  requirements.txt  start_bondsai.py
assessments/: Andy_Shang_assessment_20250816_153654.md  Michael_assessment_20250816_154650.md  Yen-Chun_Chen_assessment_20250816_145544.md
bondsai/: main.py  pyproject.toml
frontend/: index.html  lovetheme.css  script.js  styles.css
frontend/obsolete/: script.js  styles.css
src/bondsai/: __init__.py  cli.py  config.py  core.py  job_screening.py
src/server/: AIAssessmentCompiler.py  ApplicantManager.py  AssessmentFileLoader.py  DeltaTimeRecorder.py
static/: 404.html  applicant.html  applicant_applied.html  index.html  journey.html  recruiter.html  script.js  styles.css  thank-you.html
static/scripts/: journeyscript.js  recruiterscript.js  script.js
static/styles/: 404.css  applicant_applied.css  journeystyles.css  recruiterstyles.css  styles.css
